Improved pmt button look - improved invoice btn visibility - corrected fuel price

--- a/public/css/theme1.css
+++ b/public/css/theme1.css
@@ -43,17 +43,18 @@
   -moz-background-clip: padding;
   background-clip: padding-box;
   -webkit-background-clip: padding-box;
+  vertical-align: middle;
 }
 .jqx-fill-state-pressed-theme1
 {
-  color: red;
+  color: #CC0033;
   border-color: #AAAAAA;
   background-color: #EFEFEF;
   background-image: -moz-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: -ms-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: -o-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: -webkit-gradient(linear, center top, center bottom, from(#BBC8F9), to(#EFEFEF));
-  background-image: -webkit-linear-gradient(top, #BBC8F9, #EFEFEF);
+  background-image: -webkit-linear-gradient(top, #4369F2, #A39C9C);
   background-image: linear-gradient(top, #BBC8F9, #EFEFEF);
   -moz-background-clip: padding;
   background-clip: padding-box;
@@ -247,6 +248,7 @@
   background-image: -ms-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: -o-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: -webkit-gradient(linear, center top, center bottom, from(#BBC8F9), to(#EFEFEF));
+/*  background-image: -webkit-linear-gradient(top, #BBC8F9, #EFEFEF);*/
   background-image: -webkit-linear-gradient(top, #BBC8F9, #EFEFEF);
   background-image: linear-gradient(top, #BBC8F9, #EFEFEF);
   -moz-background-clip: padding;
